# pixar-boxoffice

./: README.md  app.py  appcopy.py  home.py  movies.py  pyproject.toml  requirements.txt
data/: academy.csv  box_office.csv  genres.csv  pixar_films.csv  pixar_people.csv  public_response.csv  trailer.csv
pages/: home.py  movies.py
